GNOME Bugzilla – Bug 734621
libgnomekbd/gkbd-keyboard-drawing.c: fix modifier key pressed state
Last modified: 2016-01-21 20:39:40 UTC
Created attachment 283108 [details] [review] libgnomekbd/gkbd-keyboard-drawing.c: fix modifier key pressed state Right now when tracking modifiers is enabled the pressed state of the modifiers keys is drawn wrong. To replicate the issue use something like: ./test/gkbd-keyboard-drawing-test --groups=1 --levels=1 --track-modifiers and press shift, the symbols on the keyboard change but the shift key is not shown as pressed. This is because drawing->keys gets reallocated an zeroed when the modifier keypress event fires. The following patch is an attempt to fix the current situation, the code it removes was also doing some redundant check, which made me think that this part of the code was not reviewed or tested properly in the first place. Any comments? Thanks, Antonio
ping
Works for me, thanks. Attachment 283108 [details] pushed as 6c4816f - libgnomekbd/gkbd-keyboard-drawing.c: fix modifier key pressed state